2017-02-09  Chris Dumez  <cdumez@apple.com>

        Make sure Event keeps its current target element alive
        https://bugs.webkit.org/show_bug.cgi?id=167885
        <rdar://problem/30376972>

        Reviewed by Brent Fulgham.

        Make sure Event keeps its current target element alive to avoid
        crashes if it is accessed by JS after it has been garbage collected.

        Test: fast/events/currentTarget-gc-crash.html

        * dom/Event.cpp:
        (WebCore::Event::setCurrentTarget):
        * dom/Event.h:
        (WebCore::Event::currentTarget):

2017-02-09  Ryosuke Niwa  <rniwa@webkit.org>

        Crash in render tree after dynamically mutating the slot value
        https://bugs.webkit.org/show_bug.cgi?id=167502

        Reviewed by Antti Koivisto.

        The crash was caused by attributeChanged not destructing the render tree after an assigned element had been
        removed from its slot. Since the style resolver can no longer find this element in the flat tree, we need to
        delete its render object as if the element had been removed from the DOM tree.

        Tests: fast/html/details-summary-slot.html
               fast/shadow-dom/shadow-slot-attribute-change-crash.html

        * dom/Element.cpp:
        (WebCore::Element::attributeChanged):
        * html/HTMLSummaryElement.cpp:
        (WebCore::SummarySlotElement): Added. Always use the default slot regardless of the slot attribute's value.
        (WebCore::HTMLSummaryElement::create): Use SummarySlotElement

2017-02-09  Antti Koivisto  <antti@apple.com>

        Details element doesn't work correctly when mutating content between closing and opening
        https://bugs.webkit.org/show_bug.cgi?id=167310

        Reviewed by Ryosuke Niwa.

        Tests: fast/html/details-close-modify-open.html
               fast/shadow-dom/slot-remove-mutate-add.html

        * dom/SlotAssignment.cpp:
        (WebCore::SlotAssignment::didChangeSlot):
